--- a/Game of Life/Game of Life.html
+++ b/Game of Life/Game of Life.html
@@ -6,8 +6,7 @@
 </head>
 <body style="background-color: #002137;">
  
-<canvas id="myCanvas" width="400px" height="400px" 
-style="position: relative; top: calc(50vh - 200px); left: calc(50vw - 200px); background-color: white;" >
+<canvas id="myCanvas" width="400px" height="400px" style="position: relative; top: calc(50vh - 200px); left: calc(50vw - 200px); background-color: white;" >
 Your browser does not support the canvas element.
 </canvas>
  
